--- a/mcv.css
+++ b/mcv.css
@@ -1,6 +1,8 @@
 body{
     background-color: #10002b;
     font-family: "Nunito", sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 /* navbar */
@@ -69,7 +71,7 @@ h3{
     transition: transform 0.3s ease;
 }
 
-#imgg:hover{
+#imgg:hover , #imgg:focus{
     transform: scale(1.05);
 }
 
@@ -87,7 +89,6 @@ h3{
 .project img{
     height: 100%;
     width: 100%;
-    
 }
 
 .btn{
@@ -107,3 +108,39 @@ width: 40px;
 margin-left: 20px;
 
 }
+
+.cir{
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #3c096c;
+}
+
+.cir img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    padding-right: 12px;
+}
+
+.round{
+    border-radius: 5px 0 0 5px;
+}
+
+
+ @media only screen and ( max-width:767px){
+    .round{
+        border-radius: 5px 5px 0 0;
+    }
+} 
+/* @media only screen and ( min-width:768px) and ( max-width:991px) {
+
+}
+@media only screen and ( min-width:992px) and ( max-width:1199px) {
+
+}
+@media only screen and ( min-width:1200px){
+    
+}  */
