--- a/mcv.css
+++ b/mcv.css
@@ -7,13 +7,13 @@ body{
 
 /* navbar */
 #mainNavbar{
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     font-weight: 100;
     text-transform: uppercase;
 }
 
 #mainNavbar .navbar-brand {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     font-weight: 400;
     color: #9d4edd;
 }
@@ -37,7 +37,7 @@ h1{
     color: white;
     font-weight: 100;
     font-size: 1.125rem;
-    line-height: 2;
+    line-height: 2.5;
 }
 
 .box{
@@ -133,6 +133,21 @@ margin-left: 20px;
  @media only screen and ( max-width:767px){
     .round{
         border-radius: 5px 5px 0 0;
+    }
+    h1 {
+        font-size: 2.1rem;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    h3 {
+        font-size: 1.2rem;
+    }
+    .lead{
+        line-height: 2;
+    }
+    #mainNavbar{
+        font-size: 1.4rem;
     }
 } 
 /* @media only screen and ( min-width:768px) and ( max-width:991px) {
