--- a/calculator/calculator.css
+++ b/calculator/calculator.css
@@ -16,7 +16,7 @@ body{
     background-color: black;
     width: 350px;
     border: 1px inset ;
-    border-radius: 10px 10px 0 0 ;
+    border-radius: 10px 10px 10px 10px ;
 }
 
 .cont button{
@@ -27,6 +27,7 @@ body{
    font-weight: bold;
    font-size: 20px;
    border-radius: 10px;
+   color: black;
    
 }
 
