--- a/ScoreKeeper/ScoreKeeper.css
+++ b/ScoreKeeper/ScoreKeeper.css
@@ -1,18 +1,25 @@
+html{
+    height: 100%;
+    width: 100%;
+}
+
 body{
-    background-color: #fdf0d5;
+    background-color: #caf0f8;
     /* margin: 0; */
     /* padding: 0; */
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    color: whitesmoke;
 }
 
 .con{
-    background-color: #669bbc;
+    background-color: #3a0ca3;
     /* width: 50%; */
     /* margin: auto; */
-    border: 2px solid
+    border: 2px solid black;
+    border-bottom: 1px solid black;
 }
 
 img{
@@ -25,7 +32,7 @@ h1{
     text-align: center;
     text-transform: uppercase;
     font-size: 25px;
-    border-bottom: 1px solid gray;
+    /* border-bottom: 0.5px solid gray; */
 }
 
 h2{
@@ -35,23 +42,24 @@ h2{
 #playto{
     border: 1px solid;
     border-radius: 30px;
-    padding: 6px;
+    padding: 5px;
     font-size: 15px;
     font-weight: bold;
     text-align: center;
+    color: black;
 }
 
 button{
     width: 100%;
     padding: 10px ;
     text-transform: uppercase;
-    border-bottom: none;
+    
     color: aliceblue;
 }
 
 button:disabled{
-    color: rgb(114, 114, 114);
-    border: 1px solid black;
+    color: rgba(161, 161, 161, 0.701);
+    /* border: 1px solid black; */
 }
 
 .btn{
@@ -67,12 +75,12 @@ button:disabled{
 }
 
 #btn2{
-background-color: #1d3557;
+background-color: #b5179e;
 
 }
 
 #btn1{
-background-color: #3a5a40;
+background-color: #4361ee;
 
 }
 
@@ -86,9 +94,13 @@ label{
 
 
 .win{
-    color: green;
+    color: #4cc9f0;
 }
 
 .lose{
-    color: red;
+    color: #f72585;
+}
+
+p{
+    margin-left: 5px;
 }
