--- a/ScoreKeeper/ScoreKeeper.css
+++ b/ScoreKeeper/ScoreKeeper.css
@@ -16,7 +16,7 @@ body{
 
 .con{
     background-color: #3a0ca3;
-    /* width: 50%; */
+    width: 450px;
     /* margin: auto; */
     border: 2px solid black;
     border-bottom: 1px solid black;
@@ -53,7 +53,7 @@ button{
     width: 100%;
     padding: 20px ;
     text-transform: uppercase;
-    
+    font-weight: bold;
     color: aliceblue;
 }
 
