--- a/athkar/athkar.css
+++ b/athkar/athkar.css
@@ -1,5 +1,5 @@
 html {
-    height: 100%;
+    height: 95%;
 }
 
 
@@ -12,17 +12,18 @@ body {
 .container {
     background-color: #a3b18a;
     padding: 60px 40px;
-    border-radius: 50% 20% / 10% 40%;
+    border-radius: 30% 10%;
 }
 
 .athkar {
-    font-size: 25px;
+    font-size: 1.5rem;
+    line-height: 1.7;
     text-wrap: balance;
 }
 
 .counter {
-    font-size: 25px;
-    padding: 5px 30px;
+    font-size: 1.5rem;
+    padding: 0.5rem 2rem;
 }
 
 .reset{
@@ -37,14 +38,14 @@ body {
 }
 
 .start{
-    padding: 10px 50px;
+    padding: 0.6rem 3rem;
     text-align: center;
-    font-size: 30px;
-    margin-top: 150px;
+    font-size: 1.8rem;
+    margin-top: 10rem;
     background-color: #a3b18a;
-    border-radius: 5px;
+    border-radius: 0.3rem;
     color: black;
-    border: 2px solid black;
+    border: 1px inset black;
 }
 
 .containerr {
@@ -56,11 +57,42 @@ body {
   
   .undo {
     position: absolute; /* Position the button independently */
-    left: 20px; /* Push the button to the left of the container */
-    padding: 3px 10px;
+    left: 1.25rem; /* Push the button to the left of the container */
+    padding: 0.2rem 0.6rem;
     background-color: #a3b18a;
-    border-radius: 5px;
-    border: 1.5px solid black;
+    border-radius: 0.3rem;
+    border: 1px inset black;
   }
   
-  
+  section{
+    height: 80vh;
+  }
+
+  .start:hover, .undo:hover {
+    background-color: #7e9971;
+    transform: scale(0.95);
+    border: 1px solid #fff;
+    color: white;
+    transition: all 0.3s ease-in-out;
+}
+
+
+
+
+@media (max-width: 768px) {
+    .container {
+        padding: 30px 20px;
+        border-radius: 30% 10%;
+    }
+    .athkar {
+        font-size: 1.3rem;
+    }
+    .counter {
+        font-size: 1.4rem;
+        padding: 6px 23px;
+    }
+    .start {
+        padding: 10px 20px;
+        font-size: 1.6rem;
+    }
+}
