--- a/athkar/athkar.css
+++ b/athkar/athkar.css
@@ -2,7 +2,7 @@ html,
 body {
     margin: 0;
     padding: 0;
-    height: 80vh;
+    height: 95%;
     background-color: #dad7cd;
     font-family: "Zain", sans-serif;
 }
