--- a/athkarv2/athkarv2.css
+++ b/athkarv2/athkarv2.css
@@ -66,12 +66,14 @@ h1 {
 hr {
     opacity: 0.5;
     border: 0.1rem solid #ccd5ae;
+    transition: all 0.2s ease-in-out;
 }
 
 .con{
     background-color: #b1b897;
     padding: 60px 40px;
     border-radius: 30% 10%;
+    transition: all 0.2s ease-in-out;
 }
 
 
@@ -81,6 +83,7 @@ hr {
     font-size: 1.5rem;
     line-height: 1.7;
     text-wrap: balance;
+    transition: all 0.2s ease-in-out;
 }
 
 footer {
@@ -125,27 +128,33 @@ footer {
     font-weight: 600;
     font-size: 1.5rem;
     margin-bottom: 1rem;
+    transition: all 0.2s ease-in-out;
 }
 
 
 @media only screen and ( max-width:767px){
-   
+    body {
+        height: 78%;
+    }
 } 
 @media only screen and ( min-width:768px) and ( max-width:991px) {
     #reset {
-        left: 24rem;
+        left: 17rem;
     }
     .bs {
-        font-size: 1.9rem
+        font-size: 1.8rem
     }
     .thkr {
-        font-size: 1.9rem;
+        font-size: 1.8rem;
     }
     #counter {
-        font-size: 2rem;
-        padding: 1rem 1.2rem;
+        font-size: 1.8rem;
+        padding: 0.7rem 1rem;
         border-radius: 100%;
-        width: 5rem;
+        width: 4rem;
+    }
+    .con{
+        width: 90%;
     }
 }
 @media only screen and ( min-width:992px) and ( max-width:1199px) {
