--- a/athkarv2/athkarv2.css
+++ b/athkarv2/athkarv2.css
@@ -37,19 +37,15 @@ button {
 
 }
 
-button:focus {
-    transform: scale(0.95);
-    transition: all 0.2s ease-in-out;
-}
 
 #morning {
     margin-top: 5rem;
     margin-bottom: 2rem;
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.454);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 #night {
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.454);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .none {
@@ -73,7 +69,7 @@ h1 {
     padding: 0.1rem 0;
     position: absolute;
     left: 1rem;
-    box-shadow: 5px 1px 20px rgba(0, 0, 0, 0.454);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 hr {
@@ -86,7 +82,7 @@ hr {
     background-color: #b1b897;
     padding: 60px 40px;
     border-radius: 30% 10%;
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.455);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     transition: all 0.2s ease-in-out;
 }
 
@@ -154,6 +150,9 @@ footer {
 
     #morning {
         margin-top: 10rem;
+    }
+    .con{
+        padding: 60px 22px;
     }
 }
 
