--- a/athkarv2/athkarv2.css
+++ b/athkarv2/athkarv2.css
@@ -1,7 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "Zain", sans-serif;
+    font-family: "Zain";
+    font-style: normal;
 }
 
 html {
@@ -144,6 +145,9 @@ footer {
 
 
 @media only screen and (max-width:767px) {
+    header {
+        margin-bottom: 0.2rem;
+    }
     body {
         height: 75%;
     }
@@ -151,8 +155,17 @@ footer {
     #morning {
         margin-top: 10rem;
     }
-    .con{
+
+    .con {
         padding: 60px 22px;
+    }
+
+    #reset {
+        left: 4rem;
+    }
+
+    h1 {
+        font-size: 2.1rem;
     }
 }
 
