--- a/athkarv2/athkarv2.css
+++ b/athkarv2/athkarv2.css
@@ -144,7 +144,7 @@ footer {
 }
 
 
-@media only screen and (max-width:767px) {
+@media only screen and (max-width:400px) {
     header {
         margin-bottom: 0.2rem;
     }
@@ -161,7 +161,32 @@ footer {
     }
 
     #reset {
-        left: 4rem;
+        left: 4.4rem;
+    }
+
+    h1 {
+        font-size: 2.1rem;
+    }
+}
+
+@media only screen and (min-width:401px) and (max-width:767px) {
+    header {
+        margin-bottom: 0.2rem;
+    }
+    body {
+        height: 75%;
+    }
+
+    #morning {
+        margin-top: 10rem;
+    }
+
+    .con {
+        padding: 60px 22px;
+    }
+
+    #reset {
+        left: 6rem;
     }
 
     h1 {
